fixed address bar jump on mobile (hopefully))

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -88,7 +88,7 @@ ul {
 		color: white !important;
 		border-width: 0 !important;
 		background-attachment: fixed;
-		background-size: cover;
+		background-size: 800px;
 		transition: background 0.3s ease-in-out;
 	}
 
